# Prepare kotlinx-serialization
load("@rules_kotlin//kotlin:core.bzl", "define_kt_toolchain", "kt_compiler_plugin")
load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

JAVA_LANGUAGE_LEVEL = "11"

KOTLIN_LANGUAGE_LEVEL = "1.8"

define_kt_toolchain(
    name = "kotlin_toolchain",
    api_version = KOTLIN_LANGUAGE_LEVEL,
    jvm_target = JAVA_LANGUAGE_LEVEL,
    language_version = KOTLIN_LANGUAGE_LEVEL,
)

kt_compiler_plugin(
    name = "serialization_plugin",
    compile_phase = True,
    id = "org.jetbrains.kotlin.serialization",
    stubs_phase = True,
    deps = [
        "@rules_kotlin//kotlin/compiler:kotlinx-serialization-compiler-plugin",
    ],
)

kt_jvm_library(
    name = "kotlin_serialization",
    srcs = [],
    exported_compiler_plugins = [":serialization_plugin"],
    visibility = ["//visibility:public"],
    exports = [
        "@maven//:com_charleskorn_kaml_kaml_jvm",
        "@maven//:org_jetbrains_kotlinx_kotlinx_serialization_core_jvm",
        "@maven//:org_jetbrains_kotlinx_kotlinx_serialization_json_jvm",
    ],
)

#load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
#
#buildifier(
#    name = "buildifier",
#)

#genrule(
#    name = "argo_cli_rule",
#    srcs = ["@argo_cli_gz//file"],
#    outs = ["argo_cli"],  # or whatever the file name should be
#    cmd = "gunzip -c $(SRCS) > $(OUTS) && chmod +x $(OUTS)",
#    executable = True,
#    visibility = ["//visibility:public"],
#)
