load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "ha_project_lib",
    srcs = glob(
        ["**/*.kt"],
    ),
    visibility = ["//visibility:public"],
    deps = [
        "//kt/dsl_core/kotlin:dsl-core-lib",
    ],
)

java_binary(
    name = "ha_project",
    main_class = "ha_project.MainKt",
    visibility = ["//visibility:public"],
    runtime_deps = [":ha_project_lib"],
)
