load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "dsl-core-lib",
    srcs = glob(
        ["**/*.kt"],
    ),
    visibility = ["//visibility:public"],
    deps = [
        "//:kotlin_serialization",
        "@maven//:com_github_ajalt_clikt_clikt_jvm",
        "@maven//:com_github_doyaaaaaken_kotlin_csv_jvm",
        "@maven//:io_klogging_klogging_jvm",
    ],
)
